# kodama

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
src/: compiler.rs  config.rs  entry.rs  error.rs  html_flake.rs  html_macro.rs  main.rs  recorder.rs  slug.rs  typst_cli.rs
src/compiler/: callback.rs  counter.rs  html_parser.rs  parser.rs  section.rs  state.rs  taxon.rs  typst.rs  writer.rs
src/include/: auto-render.html  import-fonts.html  import-katex.html  import-math.html  main.css  typst.css
src/process/: embed_markdown.rs  figure.rs  footnote.rs  katex_compat.rs  mod.rs  processer.rs  typst_image.rs
typst/: kodama.typ
