[package]
name = "kodama"
version = "0.2.5"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
escape-bytes = "0.1.1"
fancy-regex = "0.14.0"
pulldown-cmark = { version = "0.12.2", default-features = false, features = ["html"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
