[package]
name = "kodama"
version = "0.2.5"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
eyre = "0.6.12"
htmlize = { version = "1.0.5", features = ["unescape"]}
internment = { version = "0.8.6", features = ["serde"] }
pulldown-cmark = { version = "0.12.2", default-features = false, features = ["html"] }
regex-lite = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"

[profile.release]
strip = true
